{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 19,
  "lineage": "18378801-08c5-b1a5-6128-bd7cd838f115",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06534f595cf7ff945",
            "arn": "arn:aws:ec2:eu-central-1:413648731451:elastic-ip/eipalloc-06534f595cf7ff945",
            "association_id": "eipassoc-08a4f3462f30858fe",
            "domain": "vpc",
            "id": "eipalloc-06534f595cf7ff945",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0ba78616e50cc054c",
            "private_dns": "ip-10-0-1-182.eu-central-1.compute.internal",
            "private_ip": "10.0.1.182",
            "public_dns": "ec2-3-127-167-158.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.127.167.158",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Name": "DevOpsNATElasticIP"
            },
            "tags_all": {
              "Name": "DevOpsNATElasticIP"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01f79b1e4a5c64257",
            "arn": "arn:aws:ec2:eu-central-1:413648731451:instance/i-05fb2a3a6abaf91b1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05fb2a3a6abaf91b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-021c78232151713af"
              }
            ],
            "primary_network_interface_id": "eni-021c78232151713af",
            "private_dns": "ip-10-0-1-102.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.102",
            "public_dns": "ec2-3-71-199-40.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.71.199.40",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ace1470c94659a79",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a80f400c58b75d1a",
            "tags": {
              "Name": "MyTerraformInstance"
            },
            "tags_all": {
              "Name": "MyTerraformInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e940d57f56ff018b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "413648731451",
            "id": "i-05fb2a3a6abaf91b1",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.devops_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:413648731451:internet-gateway/igw-034c57379eb9b1257",
            "id": "igw-034c57379eb9b1257",
            "owner_id": "413648731451",
            "region": "eu-central-1",
            "tags": {
              "Name": "DevOpsInternetGateway"
            },
            "tags_all": {
              "Name": "DevOpsInternetGateway"
            },
            "vpc_id": "vpc-078a000b46bfa3fc4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06534f595cf7ff945",
            "association_id": "eipassoc-08a4f3462f30858fe",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-06300fa9bb5a9c453",
            "network_interface_id": "eni-0ba78616e50cc054c",
            "private_ip": "10.0.1.182",
            "public_ip": "3.127.167.158",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a80f400c58b75d1a",
            "tags": {
              "Name": "DevOpsNATGateway"
            },
            "tags_all": {
              "Name": "DevOpsNATGateway"
            },
            "vpc_id": "vpc-078a000b46bfa3fc4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0286e6be9ec74b9352377918344",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06300fa9bb5a9c453",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-0286e6be9ec74b935",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "413648731451",
            "destination_cidr_block": "10.2.0.0/24",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-0286e6be9ec74b935"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.devops",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-034c57379eb9b1257",
            "id": "r-rtb-0286e6be9ec74b9351080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-0286e6be9ec74b935",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "413648731451",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-0286e6be9ec74b935"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.devops",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:413648731451:route-table/rtb-0286e6be9ec74b935",
            "id": "rtb-0286e6be9ec74b935",
            "owner_id": "413648731451",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-034c57379eb9b1257",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06300fa9bb5a9c453",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DevOpsRouteTable"
            },
            "tags_all": {
              "Name": "DevOpsRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-078a000b46bfa3fc4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "413648731451",
            "id": "rtb-0286e6be9ec74b935",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087685c4c21a2e427",
            "region": "eu-central-1",
            "route_table_id": "rtb-0286e6be9ec74b935",
            "subnet_id": "subnet-0a80f400c58b75d1a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.devops",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:413648731451:security-group/sg-0e940d57f56ff018b",
            "description": "Security group for DevOps instances",
            "egress": [],
            "id": "sg-0e940d57f56ff018b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devops-sg",
            "name_prefix": "",
            "owner_id": "413648731451",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-078a000b46bfa3fc4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "413648731451",
            "id": "sg-0e940d57f56ff018b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:413648731451:subnet/subnet-050a9364ced480068",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050a9364ced480068",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "413648731451",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "DevOpsPrivateSubnet"
            },
            "tags_all": {
              "Name": "DevOpsPrivateSubnet"
            },
            "vpc_id": "vpc-078a000b46bfa3fc4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "413648731451",
            "id": "subnet-050a9364ced480068",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:413648731451:subnet/subnet-0a80f400c58b75d1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a80f400c58b75d1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "413648731451",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "DevOpsPublicSubnet"
            },
            "tags_all": {
              "Name": "DevOpsPublicSubnet"
            },
            "vpc_id": "vpc-078a000b46bfa3fc4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "413648731451",
            "id": "subnet-0a80f400c58b75d1a",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:413648731451:vpc/vpc-078a000b46bfa3fc4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f8eb0b1e94555d92",
            "default_route_table_id": "rtb-001f7dcba946e79e0",
            "default_security_group_id": "sg-0bcfa4e7d339ae0a6",
            "dhcp_options_id": "dopt-0ea1023aaa12ef1cf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-078a000b46bfa3fc4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-001f7dcba946e79e0",
            "owner_id": "413648731451",
            "region": "eu-central-1",
            "tags": {
              "Name": "DevOpsVPC"
            },
            "tags_all": {
              "Name": "DevOpsVPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "413648731451",
            "id": "vpc-078a000b46bfa3fc4",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}